--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
     "presets": [
         [
-            "@babel/env",
+            "@babel/preset-env",
             {
                 "targets": {
                     "edge": "17",
@@ -9,6 +9,17 @@
                     "chrome": "67",
                     "safari": "11.1"
                 }
+            }
+        ]
+    ],
+    "plugins": [
+        [
+            "@babel/plugin-syntax-dynamic-import",
+            "@babel/plugin-transform-regenerator",
+            {
+                "asyncGenerators": false,
+                "generators": false,
+                "async": true
             }
         ]
     ]
