--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "webpack --config app.js"
+    "server": "babel-node ./src/bin/www",
+    "server:prod": "node dist/main.bundle.js",
+    "dev": "cross-env NODE_ENV=development npm-run-all server",
+    "clean": "rimraf build",
+    "build": "babel ./src --out-dir build",
+    "compress": "webpack build/app.js",
+    "watch": "nodemon",
+    "prod": "cross-env NODE_ENV=production npm-run-all clean build compress"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,15 +19,21 @@
     "got": "^10.6.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
+    "@babel/node": "^7.8.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-regenerator": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
-    "@babel/register": "^7.9.0",
     "babel-loader": "^8.1.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "boxen": "^4.2.0",
+    "core-js": "^3.6.4",
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.2"
   }
 }
